--- a/home.html
+++ b/home.html
@@ -111,9 +111,10 @@
                                 <div class="stats">
                                     <span class="episode" id="featured1-eps">273 Episodes</span>
                                     <div class="stat">
+                                        <!--
                                         <div class="eye">
                                             <span class="material-symbols-outlined">visibility</span>
-                                        </div>
+                                        </div>-->
                                         <span class="views" id="views"></span>
                                     </div>
                                 </div>
@@ -146,9 +147,10 @@
                                 <div class="stats">
                                     <span class="episode" id="new1-eps">273 Episodes</span>
                                     <div class="stat">
+                                        <!--
                                         <div class="eye">
                                             <span class="material-symbols-outlined">visibility</span>
-                                        </div>
+                                        </div>-->
                                         <span class="views" id="views2"></span>
                                     </div>
                                 </div>
