Making responsive update 2

--- a/home.html
+++ b/home.html
@@ -111,10 +111,9 @@
                                 <div class="stats">
                                     <span class="episode" id="featured1-eps">273 Episodes</span>
                                     <div class="stat">
-                                        <!--
                                         <div class="eye">
                                             <span class="material-symbols-outlined">visibility</span>
-                                        </div>-->
+                                        </div>
                                         <span class="views" id="views"></span>
                                     </div>
                                 </div>
@@ -147,10 +146,9 @@
                                 <div class="stats">
                                     <span class="episode" id="new1-eps">273 Episodes</span>
                                     <div class="stat">
-                                        <!--
                                         <div class="eye">
                                             <span class="material-symbols-outlined">visibility</span>
-                                        </div>-->
+                                        </div>
                                         <span class="views" id="views2"></span>
                                     </div>
                                 </div>
@@ -172,7 +170,7 @@
                 </div>
                 <h2>Latest Releases</h2>
                 <div class="latest" id="latest">
-
+                    
                 </div>
             </div>
         </div>
