Making responsive update 3

--- a/home.html
+++ b/home.html
@@ -70,6 +70,12 @@
                         <h1>Register</h1>
                     </a>
                 </div>
+                <div class="navopener">
+                    <input type="checkbox" class="navtoggler">
+                    <span class="material-symbols-outlined">
+                        account_circle
+                    </span>
+                </div>
             </div>
         </nav>
         <div class="container">
