--- a/home.html
+++ b/home.html
@@ -78,6 +78,32 @@
                 </div>
             </div>
         </nav>
+        <div class="responsivenav">
+            <div class="navbuttons2">
+                <a href="login.html" class="navlink2">
+                    <h1>Login</h1>
+                </a>
+                <a href="register.html" class="navlink2">
+                    <h1>Register</h1>
+                </a>
+                <a href="/projects.html" class="navlink2">
+                    <h1>Projects</h1>
+                </a>
+                <a href="/mature.html" class="navlink2">
+                    <h1>Mature</h1> 
+                    <span class="m">M</span>
+                </a>
+                <a href="/products.html" class="navlink2">
+                    <h1>Products</h1>
+                </a>
+                <a href="/subscriptions.html" class="navlink2">
+                    <h1>Subscriptions</h1>
+                </a>
+                <a href="https://discord.gg/eK6Gky3RW7" target="_blank" class="navlink2">
+                    <h1>Discord</h1>
+                </a>
+            </div>
+        </div>
         <div class="container">
             <div class="menu">
                 <div class="buttons" id="buttonsid">
