Making responsive update 6

--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
         <script src="/script/new.js" defer></script>
         <script src="/script/utils.js" defer></script>
         <script src="/script/dark-theme.js" defer></script>
-        <script src="/script/responsivenav.js" defer></script>
+        <script src="/script/responsive-nav.js" defer></script>
     </head>
     <body>
         <nav>
@@ -88,7 +88,7 @@
                     <h1>Register</h1>
                 </a>
                 <a href="/projects.html" class="navlink2">
-                    <span class="stick"><h1>Projects</h1></span>
+                    <h1>Projects</h1>
                 </a>
                 <a href="/mature.html" class="navlink2">
                     <h1>Mature</h1> 
