Making responsive update 7

--- a/donate.html
+++ b/donate.html
@@ -65,6 +65,12 @@
                         <h1>Register</h1>
                     </a>
                 </div>
+                <div class="navopener">
+                    <input type="checkbox" class="navtoggler" id="navtogglerid" onclick="Checked()">
+                    <span class="material-symbols-outlined">
+                        account_circle
+                    </span>
+                </div>
             </div>
         </nav>
         <div class="container">
@@ -80,7 +86,7 @@
                         <h3>Lorem Ipsum</h3>
                     </div>
                     <div class="imgcontainer">
-                        <img src="img/2022_vesikalik_AY2.png" alt="mangapic">
+                        <img src="" alt="">
                     </div>
                     <div class="text">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -96,7 +102,7 @@
                         <h3>Lorem Ipsum</h3>
                     </div>
                     <div class="imgcontainer">
-                        <img src="img/2022_vesikalik_AY2.png" alt="mangapic">
+                        <img src="" alt="">
                     </div>
                     <div class="text">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
