--- a/home.html
+++ b/home.html
@@ -136,7 +136,7 @@
                     <div class="featured1">
                         <div class="imgcontainer">
                             <a href="" class="readlink">
-                                <img alt="manganame" id="img" src="">
+                                <img alt="" id="img" src="">
                             </a>
                         </div>
                         <div class="info">
@@ -171,7 +171,7 @@
                     <div class="new1">
                         <div class="imgcontainer">
                             <a href="" class="readlink">
-                                <img alt="manganame" id="img2" src="">
+                                <img alt="" id="img2" src="">
                             </a>
                         </div>
                         <div class="info">
