--- a/subscriptions.html
+++ b/subscriptions.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
         <script src="/script/onclick.js" defer></script>
         <script src="/script/dark-theme.js" defer></script>
+        <script src="script/responsive-nav.js" defer></script>
     </head>
     <body>
         <nav>
@@ -65,8 +66,40 @@
                         <h1>Register</h1>
                     </a>
                 </div>
+                <div class="navopener">
+                    <input type="checkbox" class="navtoggler" id="navtogglerid" onclick="Checked()">
+                    <span class="material-symbols-outlined">
+                        account_circle
+                    </span>
+                </div>
             </div>
         </nav>
+        <div class="responsivenav" id="responsivenavid" style="display: none;">
+            <div class="navbuttons2">
+                <a href="login.html" class="navlink2">
+                    <h1>Login</h1>
+                </a>
+                <a href="register.html" class="navlink2">
+                    <h1>Register</h1>
+                </a>
+                <a href="/projects.html" class="navlink2">
+                    <h1>Projects</h1>
+                </a>
+                <a href="/mature.html" class="navlink2">
+                    <h1>Mature</h1> 
+                    <span class="m">M</span>
+                </a>
+                <a href="/products.html" class="navlink2">
+                    <h1>Products</h1>
+                </a>
+                <a href="/subscriptions.html" class="navlink2">
+                    <span class="stick"><h1>Subscriptions</h1></span>
+                </a>
+                <a href="https://discord.gg/eK6Gky3RW7" target="_blank" class="navlink2">
+                    <h1>Discord</h1>
+                </a>
+            </div>
+        </div>
         <div class="container">
             <div class="header"><h1>Subscriptions</h1>
             <p>Select the subscription type you would like to purchase.</p>
