--- a/home.html
+++ b/home.html
@@ -43,7 +43,7 @@
                     <a href="/subscriptions.html" class="navlink">
                         <h1>Subscriptions</h1>
                     </a>
-                    <a href="https://discord.gg/eK6Gky3RW7" target="_blank" class="navlink">
+                    <a href="" target="_blank" class="navlink">
                         <h1>Discord</h1>
                     </a>
                 </div>
@@ -228,7 +228,7 @@
                 </a>
             </div>
             <div class="dc">
-                <a href="https://discord.gg/eK6Gky3RW7" class="discord" target="_blank">
+                <a href="" class="discord" target="_blank">
                     <i class='bx bxl-discord-alt'></i>
                 </a>
             </div>
