--- a/login.html
+++ b/login.html
@@ -43,7 +43,7 @@
                     <p>Or</p>
                 </div>
                 <div class="link">
-                    <a href="https://discord.gg/eK6Gky3RW7" class="discord" target="_blank">
+                    <a href="" class="discord" target="_blank">
                         <i class='bx bxl-discord-alt'></i>
                     </a>
                 </div>
