--- a/donate.html
+++ b/donate.html
@@ -132,7 +132,7 @@
                 </a>
             </div>
             <div class="dc">
-                <a href="https://discord.gg/eK6Gky3RW7" class="discord" target="_blank">
+                <a href="" class="discord" target="_blank">
                     <i class='bx bxl-discord-alt'></i>
                 </a>
             </div>
