--- a/products.html
+++ b/products.html
@@ -95,7 +95,7 @@
                 <a href="/subscriptions.html" class="navlink2">
                     <h1>Subscriptions</h1>
                 </a>
-                <a href="https://discord.gg/eK6Gky3RW7" target="_blank" class="navlink2">
+                <a href="" target="_blank" class="navlink2">
                     <h1>Discord</h1>
                 </a>
             </div>
@@ -191,7 +191,7 @@
                 </a>
             </div>
             <div class="dc">
-                <a href="https://discord.gg/eK6Gky3RW7" class="discord" target="_blank">
+                <a href="" class="discord" target="_blank">
                     <i class='bx bxl-discord-alt'></i>
                 </a>
             </div>
