--- a/projects.html
+++ b/projects.html
@@ -41,7 +41,7 @@
                     <a href="/subscriptions.html" class="navlink">
                         <h1>Subscriptions</h1>
                     </a>
-                    <a href="https://discord.gg/eK6Gky3RW7" target="_blank" class="navlink">
+                    <a href="" target="_blank" class="navlink">
                         <h1>Discord</h1>
                     </a>
                 </div>
